<resources>
    <string name="app_name">AppClima</string>

    <string name="texto_grados">23°</string>
    <string name="texto_ciudad">Ciudad de Mexico</string>
    <string name="texto_estado">Nublado</string>
    <string name="title_activity_ciudades">Ciudades</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_ciudad">Ciudad</string>

    <string name="texto_bienvenida">Bienvenido usuario, Selecciona en la opción de abajo la ciudad requerida para ver el clima</string>
    <string name="text_boton_mexico">Clima de la ciudad de México</string>
    <string name="text_boton_berlin">Clima de la ciudad de Berlin</string>
    <string name="text_boton_fcp">Clima de la ciudad de Felipe Carrillo Puerto</string>
</resources>